--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
 node_modules/
 package-lock.json
+
+# client
+client/node_modules
+
+# testing
+client/coverage
+
+# production
+client/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
