--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
+    "uniqid": "^4.1.1",
     "validator": "^10.1.0"
   },
   "scripts": {
