--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.10",
     "mongoose": "^5.0.17",
+    "uniqid": "^4.1.1",
     "validator": "^10.1.0"
   },
   "devDependencies": {
