--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest-cli": "^20.0.4",
+    "jest-localstorage-mock": "^2.2.0",
     "react-test-renderer": "^16.3.2",
     "redux-mock-store": "^1.5.1"
   }
